# medman-biblioth-que-mp3-mp4-RUST

medman-niels-merceron-main/: Cargo.toml  README.adoc  README.md  test.json
medman-niels-merceron-main/src/: allfile.rs  assis.rs  fonctminim.rs  lib.rs  main.rs  scan.rs  scrap.rs  search.rs  seria.rs  tag.rs  write.rs  write2m.rs
