[package]
name = "medman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
walkdir = "2.3.2"
id3 = "0.6.6"
serde={version="1.0.130", features = ["derive"]}
serde_json="1.0.69"
markdown-gen="1.2.1"
pls="0.2.2"
mp4ameta="0.11.0"
reqwest= {version="0.10", features=["json"]}
tokio={version="0.2",features =["full"]}
